--- a/LegalMatch/app/src/main/res/layout/activity_main.xml
+++ b/LegalMatch/app/src/main/res/layout/activity_main.xml
@@ -79,4 +79,18 @@
             android:textColor="@color/black" />
     </LinearLayout>
 
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barChart"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
 </RelativeLayout>
+
