--- a/LegalMatch/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/LegalMatch/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,61 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="800dp"
+    android:height="800dp"
+    android:viewportWidth="76.8"
+    android:viewportHeight="76.8">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M43.997,1.584a10.8,10.8 0,0 0,-11.194 0l-25.2,15.274A10.8,10.8 59.788,0 0,2.4 26.093l0,24.614a10.8,10.8 121.616,0 0,5.203 9.235l25.2,15.274a10.8,10.8 0,0 0,11.194 0l25.2,-15.274a10.8,10.8 75.237,0 0,5.203 -9.235L74.4,26.093a10.8,10.8 75.237,0 0,-5.203 -9.235L43.997,1.584z"
+        android:strokeWidth="0"
+        android:fillColor="#7ed0ec"/>
+    <path
+        android:pathData="M30,43.1L9.3,43.1l10.3,-26.2l10.4,26.2m-18,-1.9h15.3l-7.7,-19.5l-7.6,19.5"
+        android:fillColor="#d0d0d0"/>
+    <path
+        android:pathData="M67.5,43.1L46.8,43.1l10.3,-26.2l10.4,26.2m-18,-1.9h15.3l-7.7,-19.5l-7.6,19.5"
+        android:fillColor="#d0d0d0"/>
+    <path
+        android:pathData="M56.7,16.6s-2.2,-0.8 -3.4,-1.3C49,13.5 43.7,11.4 38.4,11.4S27.8,13.6 23.5,15.4c-1.2,0.5 -3.4,1.3 -3.4,1.3l-3.3,2.5s2.7,1.7 4,1.2c1.1,-0.4 2.2,-0.9 3.5,-1.4C28.4,17.3 33.5,15.2 38.4,15.2s10,2.1 14.1,3.8c1.2,0.5 2.4,1 3.5,1.4c1.4,0.5 4,-1.2 4,-1.2l-3.3,-2.6"
+        android:fillColor="#b8c2c4"/>
+    <path
+        android:pathData="M8.4,41.2C8.4,47.4 13.4,52.4 19.6,52.4s11.2,-5 11.2,-11.2L8.4,41.2z"
+        android:fillColor="#006BE5"/>
+    <path
+        android:pathData="M45.9,41.2c0,6.2 5,11.2 11.2,11.2S68.4,47.4 68.4,41.2L45.9,41.2z"
+        android:fillColor="#006BE5"/>
+    <path
+        android:pathData="M36.5,18.7h3.8v41.2h-3.8z"
+        android:fillColor="#b8c2c4"/>
+    <path
+        android:pathData="M35.4,25h6.1v34.9L35.4,59.9z"
+        android:fillColor="#d0d0d0"/>
+    <path
+        android:pathData="M34.1,43.1h8.6v19.7h-8.6z"
+        android:fillColor="#545b60"/>
+    <path
+        android:pathData="M19.6,19.6m-3.8,0a3.8,3.8 0,1 1,7.6 0a3.8,3.8 0,1 1,-7.6 0"
+        android:fillColor="#dbb471"/>
+    <path
+        android:pathData="M57.2,19.6m-3.8,0a3.8,3.8 0,1 1,7.6 0a3.8,3.8 0,1 1,-7.6 0"
+        android:fillColor="#545b60"/>
+    <path
+        android:pathData="M19.6,19.6m-3.8,0a3.8,3.8 0,1 1,7.6 0a3.8,3.8 0,1 1,-7.6 0"
+        android:fillColor="#545b60"/>
+    <path
+        android:pathData="M19.6,19.6m-1.9,0a1.9,1.9 0,1 1,3.8 0a1.9,1.9 0,1 1,-3.8 0"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M57.2,19.6m-1.9,0a1.9,1.9 0,1 1,3.8 0a1.9,1.9 0,1 1,-3.8 0"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M38.4,14m-5.6,0a5.6,5.6 0,1 1,11.2 0a5.6,5.6 0,1 1,-11.2 0"
+        android:fillColor="#d0d0d0"/>
+    <path
+        android:pathData="M38.4,51.5c-8.3,0 -15,4.2 -15,9.4h30c0,-5.2 -6.7,-9.4 -15,-9.4"
+        android:fillColor="#d0d0d0"/>
+    <path
+        android:pathData="M21.5,60.9h33.8v3.8L21.5,64.7z"
+        android:fillColor="#545b60"/>
+    <path
+        android:pathData="M17.8,64.6h41.2L59,68.4L17.8,68.4z"
+        android:fillColor="#6b767c"/>
 </vector>
